Fixed masonry spacing and added ratings

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,10 +31,12 @@ button {
     max-height: 40px;
 }
 
-.grid-sizer,
+.grid {
+    margin: 0 auto;
+}
+
 .grid-item {
-    width: 33.3%;
-    margin-bottom: 5px;
+    margin-bottom: 35px;
 }
 
 img {
